--- a/effiewebver/src/components/NavList/index.scss
+++ b/effiewebver/src/components/NavList/index.scss
@@ -5,7 +5,7 @@
   left: 0;
   width: 100%;
   height: 30px;
-  padding: 0 20px;
+  // padding: 0 20px;
   line-height: 30px;
   background: #fff;
   box-sizing: border-box;
