--- a/effiewebver/src/components/Note/index.scss
+++ b/effiewebver/src/components/Note/index.scss
@@ -44,13 +44,14 @@
 .note-body {
   width: 100%;
   height: 100%;
-  padding: 100px 0px;
+  // padding: 100px 0px;
   box-sizing: border-box;
   background: #fff;
   textarea {
     width: 100%;
-    height: 100%;
-    padding: 0 300px;
+    height: 99.811vh;
+    min-width: 500px;
+    padding: 100px 300px;
     font-size: 26px;
     border: none;
     outline: none;
